# cygnss-wetlands

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
cygnss_wetlands/: __init__.py  credentials.py  enums.py
cygnss_wetlands/animation/: animate.py
cygnss_wetlands/cygnss/: __init__.py  aggregate.py  cli.py  config.yaml  download.py  reader.py
cygnss_wetlands/grids/: __init__.py  ease.py  grid.py
cygnss_wetlands/utils/: constants.py  radar.py
notebooks/: 2023-07-25_Reader_Aggregate_Demo.ipynb  2023-08-27_Updated_Reader_Aggregate_Grid_Demo.ipynb  2023-09-03_Updated_Reader_Aggregate_Grid_Demo.ipynb  2023-09-21_Compare_Gridding.ipynb  2023-09-21_Compare_Gridding_Methods.ipynb  2023-09-22_Compare_Gridding_Methods.ipynb  2023-09-25_Export_footprints.ipynb  2023-09_01_Animation_Demo.ipynb  2023-10_18_Animation_Demo.ipynb  Untitled.ipynb
